update frontend and backend features
